--- src/hatlib/hat.cabal.sav	2005-05-13 09:03:32.000000000 -0400
+++ src/hatlib/hat.cabal	2005-11-28 04:07:28.000000000 -0500
@@ -39,6 +39,7 @@
 	Hat.Data.Either
 	Hat.Data.FiniteMap
 	Hat.Data.IORef
+	Hat.Data.IORefBuiltin
 	Hat.Data.Ix
 	Hat.Data.List
 	Hat.Data.Maybe
@@ -49,14 +50,20 @@
 	Hat.Data.Set
 	Hat.Data.Tuple
 	Hat.Data.Word
+	Hat.Data.WordBuiltin
 	Hat.Debug.Trace
 	Hat.Directory
+	Hat.DirectoryBuiltin
+	Hat.DirectoryBuiltinTypes
+	Hat.Foreign.BuiltinTypes
 	Hat.Foreign.ForeignPtr
 	Hat.Foreign.Ptr
 	Hat.Foreign.StablePtr
 	Hat.Foreign.Storable
 	Hat.Foreign.Marshal.Error
 	Hat.IO
+	Hat.IOBuiltin
+	Hat.IOBuiltinTypes
 	Hat.Ix
 	Hat.List
 	Hat.Locale
@@ -65,10 +72,14 @@
 	Hat.Numeric
 	Hat.Prelude
 	Hat.PreludeBasic
+	Hat.PreludeBuiltin
 	Hat.PreludeBuiltinTypes
 	Hat.Random
+	Hat.RandomBuiltin
 	Hat.Ratio
 	Hat.System
+	Hat.SystemBuiltin
+	Hat.SystemBuiltinTypes
 	Hat.System.CPUTime
 	Hat.System.Cmd
 	Hat.System.Directory
@@ -94,19 +105,6 @@
 	Hat.Text.Read
 	Hat.Text.Show
 	Hat.Time
-other-modules:
-	Hat.Data.IORefBuiltin
-	Hat.Data.PackedStringBuiltin
-	Hat.Data.WordBuiltin
-	Hat.DirectoryBuiltin
-	Hat.DirectoryBuiltinTypes
-	Hat.Foreign.BuiltinTypes
-	Hat.IOBuiltin
-	Hat.IOBuiltinTypes
-	Hat.PreludeBuiltin
-	Hat.RandomBuiltin
-	Hat.SystemBuiltin
-	Hat.SystemBuiltinTypes
 	Hat.TimeBuiltin
 	Hat.TimeBuiltinTypes
 hs-source-dir:	src/hatlib
