--- libraries/base/base.cabal.sav	2007-12-17 16:35:22.000000000 -0500
+++ libraries/base/base.cabal	2007-12-17 16:36:18.000000000 -0500
@@ -10,9 +10,11 @@
     structures to parsing combinators and debugging utilities.
 cabal-version:  >=1.2
 build-type: Custom
+extra-source-files:
+		base.buildinfo.in
 extra-tmp-files:
                 config.log config.status autom4te.cache
-                include/HsBaseConfig.h
+                include/HsBaseConfig.h base.buildinfo
 
 
 Library {
